--- a/build.gradle
+++ b/build.gradle
@@ -24,14 +24,28 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    // 기본 설정
     compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'com.h2database:h2'
-    runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // web
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    // jpa
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    // h2 db: 테스트용
+    runtimeOnly 'com.h2database:h2'
+
+    // Postgresql
+    runtimeOnly 'com.mysql:mysql-connector-j'
+
+    // SpringDoc - Swagger UI
+    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0")
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.671'
 }
 
 tasks.named('test') {
