--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -33,10 +33,10 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_ID }}/cleopatra:latest .
-          docker push ${{ secrets.DOCKERHUB_ID }}/cleopatra:latest
+          docker build -t ${{ secrets.DOCKERHUB_ID }}/cleopatra-server:latest .
+          docker push ${{ secrets.DOCKERHUB_ID }}/cleopatra-server:latest
 
-      - name: Set up SSH
+      - name: Set up SSH Agent
         uses: webfactory/ssh-agent@v0.5.3
         with:
           ssh-private-key: ${{ secrets.EC2_PRIVATE_KEY }}
@@ -45,13 +45,9 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} << 'EOF'
             echo ${{ secrets.DOCKERHUB_TOKEN }} | sudo docker login -u ${{ secrets.DOCKERHUB_ID }} --password-stdin
-            sudo docker pull ${{ secrets.DOCKERHUB_ID }}/cleopatra:latest
-            sudo docker stop cleopatra-api || true
-            sudo docker rm cleopatra-api || true
-            sudo docker run -d \
-              --name cleopatra-api \
-              -p 8080:8080 \
-              -e "SPRING_PROFILES_ACTIVE=prod" \
-              -e "TZ=Asia/Seoul" \
-              ${{ secrets.DOCKERHUB_ID }}/cleopatra:latest
+            cd /home/ubuntu/cleopatra
+            sudo docker compose pull application
+            sudo docker compose down
+            sudo docker compose up -d
+            sudo docker image prune -f
           EOF
