--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
   push:
     branches:
-      - 'main'
+      - 'dev'
 
 jobs:
   build:
@@ -30,5 +30,5 @@ jobs:
       - name: Grant Execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Build with Gradle including tests
-        run: ./gradlew clean build
+      - name: Build with Gradle excluding tests
+        run: ./gradlew clean build -x test
