--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+# version: '3.8' 불필요: 최신 Docker Desktop이나 docker compose CLI는 Compose Specification (스펙) 를 따릅
 
 services:
   mysql:
@@ -12,9 +12,10 @@ services:
       timeout: 5s
       retries: 5
     ports:
-      - "3307:3306"
+      - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
+      - ./mysql-init:/docker-entrypoint-initdb.d
     networks:
       - my-network
 
