--- a/build.gradle
+++ b/build.gradle
@@ -40,8 +40,11 @@ dependencies {
     // h2 db: 테스트용
     runtimeOnly 'com.h2database:h2'
 
-    // Postgresql
+    // mysql
     runtimeOnly 'com.mysql:mysql-connector-j'
+
+    // webclient
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
     // SpringDoc - Swagger UI
     implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0")
