Refact/5-data-collect: 데이터 수집 코드 리팩터링 - 주소 관련 enum 패키지 구조 변경 - 키워드 관련 enum 추가 - 네이버 블로그 수집 관련 코드 수정 - WebClient 설정 및 YML 파일 수정(Value 어노테이션으로 yml에서 값을 읽어오도록 변경)

--- a/src/main/resources/application-webclient.yml
+++ b/src/main/resources/application-webclient.yml
@@ -1,6 +1,5 @@
-external:
-  api:
-    naver:
-      base-url: ${NAVER_BASE_URL}
-      client-id: ${NAVER_CLIENT_ID}
-      client-secret: ${NAVER_CLIENT_SECRET}
+service:
+  naver:
+    url: ${NAVER_BASE_URL}          # 예: https://openapi.naver.com
+    client-id: ${NAVER_CLIENT_ID}
+    client-secret: ${NAVER_CLIENT_SECRET}
