--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,9 +26,38 @@ services:
           memory: 400M    # MySQL 최소 예약 메모리 400MB
     cpu_shares: 512     # CPU 우선순위 (기본 1024), 512는 절반 정도 할당
 
+  mongo:
+    image: mongo:7.0
+    container_name: cleopatra-mongo
+    env_file:
+      - .env
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_ROOT_PASSWORD}
+      - MONGO_INITDB_DATABASE=${MONGO_DB}
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo_data:/data/db
+      - ./mongo-init:/docker-entrypoint-initdb.d
+    networks:
+      - my-network
+    healthcheck:
+      test: ["CMD-SHELL","mongosh --quiet --eval 'db.adminCommand({ping:1}).ok' | grep 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+        reservations:
+          memory: 256M
+    cpu_shares: 256
 
   application:
     image: kimgt2828/cleopatra-server:latest
+    #build: .
     container_name: cleopatra-application
     env_file:
       - .env
@@ -58,3 +87,4 @@ networks:
 
 volumes:
   mysql_data:
+  mongo_data:
