--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     // SpringDoc - Swagger UI
     implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0")
 
+    // Validatoin
+    implementation "org.springframework.boot:spring-boot-starter-validation"
+
 }
 
 tasks.named('test') {
