--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,8 @@ dependencies {
     // Validatoin
     implementation "org.springframework.boot:spring-boot-starter-validation"
 
+    // Crawling
+    implementation "com.microsoft.playwright:playwright:1.46.0"
 }
 
 tasks.named('test') {
