Chore/14-data-crawl: 스웨거 문서 설정 - 스프링부트 실행시 스웨거 적용 패키지 전체 경로로 설정 - 배포 준비 완료

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -27,3 +27,9 @@ logging:
     root: info
     org.springframework.data.mongodb.core.MongoTemplate: INFO
     org.mongodb.driver: WARN
+
+springdoc:
+  packages-to-scan: com.likelion.cleopatra
+  paths-to-match: /api/**
+  default-consumes-media-type: application/json;charset=UTF-8
+  default-produces-media-type: application/json;charset=UTF-8
