--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,12 +79,23 @@ services:
     restart: always
     ports:
       - "80:80"  # HTTP 요청을 80번 포트에서 받음
+      - "443:443"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf  # 설정 파일 마운트
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./certbot/www:/var/www/certbot:ro
+      - ./certbot/conf:/etc/letsencrypt:ro
     depends_on:
       - application
     networks:
       - my-network
+
+  certbot:
+    image: certbot/certbot:latest
+    container_name: itgo-certbot
+    volumes:
+      - ./certbot/www:/var/www/certbot
+      - ./certbot/conf:/etc/letsencrypt
+
 
 networks:
   my-network:
