--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,7 +91,7 @@ services:
 
   certbot:
     image: certbot/certbot:latest
-    container_name: itgo-certbot
+    container_name: cleopatra-certbot
     volumes:
       - ./certbot/www:/var/www/certbot
       - ./certbot/conf:/etc/letsencrypt
