Chore/18-report: 디버그를 위한 AOP 추가 - build.gradle에 AOP 의존성 추가 - ServiceProfilerAspect: Service, Res or Dto에 로그 추가
메서드 진입, 종료 시점에 로그 출력

--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,9 @@ dependencies {
 
     // Crawling
     implementation "com.microsoft.playwright:playwright:1.46.0"
+
+    // AOP
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
 }
 
 tasks.named('test') {
