Refact/18-report: 빌더 패턴 리팩터링 - 서비스에서 사용하지 않고, 엔티티, Dto에 주입하여 팩토리 메서드로 사용

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,7 @@
 # version: '3.8' 불필요: 최신 Docker Desktop이나 docker compose CLI는 Compose Specification (스펙) 를 따릅
 
+name: cleopatra # 프로젝트명 고정(볼륨/네트워크 접두사 고정)
+
 services:
   mysql:
     image: mysql:8.0
@@ -102,5 +104,7 @@ networks:
     driver: bridge
 
 volumes:
-  mysql_data:
   mongo_data:
+    name: cleopatra-mongo-data   # 명시적 이름으로 CI 경로 변화와 무관
+  mysql_data:
+    name: cleopatra-mysql-data
