--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,6 +79,8 @@ services:
       mongo:
         condition: service_healthy
     restart: on-failure
+    volumes:
+      - ./config/application.yml:/app/config/application.yml:ro
     ports:
       - "8080:8080"
     networks:
