HotFix/18-report: 컨테이너간 통신 설정 -  환경 변수 - 도커 컴포즈로 변경

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -28,7 +28,5 @@ logging:
     org.mongodb.driver: WARN
 
 ai:
-  keyword:
-    base-url: http://ai:8000/api/ai
-  description:
-    base-url: http://ai:8000/api/ai
+  base-url: ${AI_BASE_URL}
+
