--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,60 +1,52 @@
 name: cleopatra
 
 services:
-  ai:
-    image: dddododo/ai-report2:latest
-    container_name: dddododo
-    ports:
-      - "8000:8000"
-    env_file:
-      - .env
+  ai-report3:
+    image: dddododo/ai-report3:latest
+    container_name: cleopatra-ai
+    ports: ["8000:8000"]
+    env_file: [.env]
     volumes:
       - ./outputs:/app/outputs
-    restart: unless-stopped
+    restart: always
     networks:
-      - my-network
+      my-network:
+        aliases:
+          - ai
 
   mysql:
     image: mysql:8.0
     container_name: cleopatra-mysql
-    env_file:
-      - .env
+    env_file: [.env]
     healthcheck:
       test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
       interval: 10s
       timeout: 5s
       retries: 5
-    ports:
-      - "3306:3306"
+    ports: ["3306:3306"]
     volumes:
       - mysql_data:/var/lib/mysql
       - ./mysql-init:/docker-entrypoint-initdb.d
-    networks:
-      - my-network
+    networks: [my-network]
     deploy:
       resources:
-        limits:
-          memory: 800M
-        reservations:
-          memory: 400M
+        limits: { memory: 800M }
+        reservations: { memory: 400M }
     cpu_shares: 512
 
   mongo:
     image: mongo:7.0
     container_name: cleopatra-mongo
-    env_file:
-      - .env
+    env_file: [.env]
     environment:
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_ROOT_USERNAME}
       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_ROOT_PASSWORD}
       - MONGO_INITDB_DATABASE=${MONGO_DB}
-    ports:
-      - "27017:27017"
+    ports: ["27017:27017"]
     volumes:
       - mongo_data:/data/db
       - ./mongo-init:/docker-entrypoint-initdb.d
-    networks:
-      - my-network
+    networks: [my-network]
     healthcheck:
       test: ["CMD-SHELL","mongosh --quiet --eval 'db.adminCommand({ping:1}).ok' | grep 1"]
       interval: 10s
@@ -62,45 +54,39 @@ services:
       retries: 5
     deploy:
       resources:
-        limits:
-          memory: 512M
-        reservations:
-          memory: 256M
+        limits: { memory: 512M }
+        reservations: { memory: 256M }
     cpu_shares: 256
 
   application:
     image: kimgt2828/cleopatra-server:latest
     container_name: cleopatra-application
-    env_file:
-      - .env
+    env_file: [.env]
+    environment:
+      SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE:-prod}
     depends_on:
+      ai-report3:
+        condition: service_started
       mysql:
         condition: service_healthy
       mongo:
         condition: service_healthy
     restart: on-failure
-    volumes:
-      - ./config/application.yml:/app/config/application.yml:ro
-    ports:
-      - "8080:8080"
-    networks:
-      - my-network
+    ports: ["8080:8080"]
+    networks: [my-network]
 
   nginx:
     image: nginx:latest
     container_name: cleopatra-nginx
     restart: always
-    ports:
-      - "80:80"
-      - "443:443"
+    ports: ["80:80","443:443"]
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./certbot/www:/var/www/certbot:ro
       - ./certbot/conf:/etc/letsencrypt:ro
     depends_on:
       - application
-    networks:
-      - my-network
+    networks: [my-network]
 
   certbot:
     image: certbot/certbot:latest
