--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,4 +2,4 @@ spring:
   config:
     import: optional:file:.env[.properties]
   profiles:
-    active: prodq, webclient
+    active: prod, webclient
