--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,7 @@ services:
       - ./application.yml:/app/config/application.yml:ro
     environment:
       SPRING_CONFIG_ADDITIONAL_LOCATION: file:/app/config/
-      #SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE:-prod}
+      SPRING_PROFILES_ACTIVE: "prod,webclient"
     depends_on:
       ai-report3:
         condition: service_started
